# gptube-cli

./: .gitignore  Cargo.toml  Makefile  README.md  gptube  gptube.sh  installReq.sh
src/: main.rs
