[package]
name = "gptube-cli"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
scraper = "0.12"
futures = "0.3"
tokio-stream = "0.1.2"
tokio-util = { version = "0.6", features = ["codec"] }
openssl = { version = "0.10", features = ["vendored"] }
